# flatcc

./: .gitignore  CMakeLists.txt  build_cross.sh
samples/: CMakeLists.txt
samples/monster/: monster.c
samples/nv_sys_param/: CMakeLists.txt  build.sh  nv_sys_param.c  nv_sys_param.fbs
samples/nv_sys_param/gen_fbs/: nv_sys_param.bfbs  nv_sys_param_builder.h  nv_sys_param_reader.h  nv_sys_param_verifier.h
scripts/: build.sh
